# citadel

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  CALIBRE_LIBCALIBRE_ANALYSIS.md  Cargo.toml  DESIGN.md  Dockerfile  MIGRATION_TEST_CHECKLIST.md  PRODUCT.md  README.md  TESTING.md  TODO  biome.json  biome.jsonc  bun.lockb  calibre-name-sort.py  chromatic.config.json  components.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  prettier.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  wdio.conf.ts
.beads/: .gitignore  issues.jsonl
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml  libcalibre-tests.yml  quality.yml  release.yml
.storybook/: main.ts  preview.ts  preview.tsx
ai-docs/: 2025-10-17_architectural-issues.md  2025-10-17_other_issues.md  ARCHITECTURE_RECOMMENDATIONS.md  ARCHITECTURE_SUMMARY.md  CALIBRE_DATABASE_RESEARCH.md  CALIBRE_WEB_IMPLEMENTATION.md  GETTING_STARTED_NEW_ARCH.md  MIGRATION_EXAMPLE.md  PATTERNS_QUICK_REFERENCE.md  README.md
crates/citadel-core/: Cargo.toml
crates/citadel-core/src/: author.rs  book.rs  lib.rs  url.rs
crates/libcalibre/: Cargo.toml
docs/: README.md  updater-and-releases.md
docs/adr/: 0001-grid-responsiveness-at-library-scale.md
docs/issues/: CALIBRE_LIBCALIBRE_ANALYSIS.md  INDEX.md  P0-01-database-triggers.md  P0-02-sql-functions.md  P0-03-in-memory-caching.md  P0-04-link-tables-crud.md  P0-05-filesystem-path-calibre-compatibility.md  P1-01-schema-versioning.md  P2-01-custom-columns-dynamic-tables.md
e2e-tests/: .gitignore  README.md  app-launch.spec.ts  app-launch.test.ts  example-with-helpers.test.ts  example.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  library-navigation.test.ts  navigation.spec.ts
e2e-tests/helpers/: app-helpers.ts
lint/biome/: no-hardcoded-colors.grit
specs/: 2025-10-10-tauri-v2-migration.md
src/: App.css  App.tsx  BookView.ts  app.d.ts  app.pcss  bindings.ts  main.tsx  routeTree.gen.ts  schema.rs  styles.css
src-tauri/: .dockerignore  Cargo.toml  Dockerfile  fly.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: minimal.json
src-tauri/icons/: icon.icns
src-tauri/libcalibre/: ARCHITECTURE.md  Cargo.toml  REFACTORING.md  diesel.toml
src-tauri/libcalibre/src/: api.rs  calibre_client.rs  client.rs  client_v2.rs  cover_image.rs  entities.rs  error.rs  lib.rs  library.rs  mime_type.rs  models.rs  persistence.rs  schema.rs  sorting.rs  test_utils.rs  types.rs  util.rs
src-tauri/libcalibre/src/api/: authors.rs  book_files.rs  books.rs
src-tauri/libcalibre/src/application/: mod.rs
src-tauri/libcalibre/src/application/services/: mod.rs
src-tauri/libcalibre/src/application/services/domain/: mod.rs
src-tauri/libcalibre/src/application/services/domain/author/: dto.rs  service.rs
src-tauri/libcalibre/src/application/services/domain/book/: dto.rs  service.rs
src-tauri/libcalibre/src/application/services/domain/book_and_author/: mod.rs  service.rs
src-tauri/libcalibre/src/application/services/domain/file/: dto.rs  mod.rs  service.rs
src-tauri/libcalibre/src/application/services/external_devices/: cache.rs  mod.rs
src-tauri/libcalibre/src/assets/: mod.rs
src-tauri/libcalibre/src/domain/: mod.rs
src-tauri/libcalibre/src/domain/author/: entity.rs  repository.rs
src-tauri/libcalibre/src/domain/book/: aggregate.rs  entity.rs  mod.rs  repository.rs
src-tauri/libcalibre/src/domain/book_file/: entity.rs  repository.rs
src-tauri/libcalibre/src/domain/file/: entity.rs  mod.rs  repository.rs
src-tauri/libcalibre/src/dtos/: author.rs  book.rs  file.rs  library.rs  mod.rs
src-tauri/libcalibre/src/entities/: author.rs  book.rs  book_aggregate.rs  book_file.rs  book_row.rs
src-tauri/libcalibre/src/infrastructure/: file_service.rs  mod.rs
src-tauri/libcalibre/src/infrastructure/domain/: mod.rs
src-tauri/libcalibre/src/infrastructure/domain/author/: mod.rs  repository.rs
src-tauri/libcalibre/src/infrastructure/domain/book/: repository.rs
src-tauri/libcalibre/src/infrastructure/domain/book_file/: repository.rs
src-tauri/libcalibre/src/infrastructure/domain/file/: mod.rs  repository.rs
src-tauri/libcalibre/src/operations/: assets.rs  authors.rs  book_ops.rs  books.rs  mod.rs
src-tauri/libcalibre/src/queries/: authors.rs  book_descriptions.rs  book_files.rs  book_identifiers.rs  books.rs  identifiers.rs  mod.rs
src-tauri/libcalibre/tests/: README.md  add_book_test.rs  author_service.rs  author_sorting_test.proptest-regressions  author_sorting_test.rs  authors_api_test.rs  basic_operations.rs  book_and_author_service.rs  book_file_service.rs  book_service.rs  books_api_test.rs  business_logic_test.rs  file_service.rs  filesystem_sanitization_test.rs  name_generation_test.rs  query_module_api.rs  sql_functions_test.rs  test_triggers.rs
src-tauri/libcalibre/tests/common/: helpers.rs  mod.rs  snapshot.rs
src-tauri/libcalibre/tests/fixtures/empty_library/: metadata.db
src-tauri/libcalibre/tests/snapshots/: add_book_test__add_single_book_full_database.snap  add_book_test__empty_library_state.snap
src-tauri/src/: app_updates.rs  book.rs  hardcover.rs  http.rs  main.rs  menu.rs  state.rs
src-tauri/src/libs/: cover_thumbs.rs  util.rs
src-tauri/src/libs/calibre/: add_book.rs  author.rs  book.rs  command.rs  custom_columns.rs  library.rs  mod.rs  models.rs  names.rs  query.rs  schema.rs  send_to_device.rs
src-tauri/src/libs/devices/: calibre_ext_cache.rs  external_drive.rs  mod.rs
src-tauri/src/libs/file_formats/: epub.rs  mobi.rs  mod.rs  pdf.rs  txt.rs
src-tauri/src/metadata/: commands.rs  hardcover.rs  http.rs  marcxml.rs  mod.rs  model.rs  openlibrary.rs  source.rs  sru.rs
src-tauri/src/metadata/fixtures/: dnb_9783462001313.xml  k10plus_9780553103540.xml  loc_9780553103540.xml
src-tauri/src/templates/: mod.rs
src/lib/: any.ts  async.ts  authors.test.ts  authors.ts  book-page-cache.test.ts  book-page-cache.ts  cover-load.ts  (+33 more)
tools/: generate-db.fish
(+293 files in other folders)
