[package]
name = "citadel-rs"
version = "0.1.0"
description = "Backend for Citadel, embedded into the Tauri app or run stand-alone."
authors = ["Phil Denhoff"]
license = "MIT"
repository = "https://github.com/every-day-things/citadel"
default-run = "citadel-rs"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
calibre-db = "0.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
epub = "2.1.1"
mobi = "0.8.0"
libcalibre = { path = "./libcalibre" }
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "=2.0.0-rc.7", features = ["chrono"] }
tauri = { version = "1.5.3", features = [ "http-all", "shell-open", "dialog-open", "fs-create-dir", "fs-read-dir", "path-all", "fs-read-file", "fs-write-file", "protocol-asset"] }
tauri-plugin-drag = "0.2.0"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["protocol-asset"] }
tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = [ "v4", "fast-rng", ] }
zip = "0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = [
  "libcalibre"
]
