[package]
name = "citadel-rs"
version = "0.3.0"
description = "Backend for Citadel, embedded into the Tauri app or run stand-alone."
authors = ["Phil Denhoff"]
license = "MIT"
repository = "https://github.com/every-day-things/citadel"
default-run = "citadel-rs"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
epub = "2.1.1"
mobi = "0.8.0"
libcalibre = { path = "./libcalibre" }
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "=2.0.0-rc.22", features = ["chrono"] }
tauri = { version = "2", features = [] }
tauri-plugin-drag = "2.1.0"
tauri-plugin-persisted-scope = { features = ["protocol-asset"] , version = "2" }
tauri-specta = { version = "=2.0.0-rc.21", features = ["javascript", "typescript"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = [ "v4", "fast-rng", ] }
zip = "0.6"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = [
  "libcalibre"
]
