[package]
name = "citadel-rs"
version = "0.6.1"
description = "Backend for Citadel, embedded into the Tauri app or run stand-alone."
authors = ["Phil Denhoff"]
license = "MIT"
repository = "https://github.com/every-day-things/citadel"
default-run = "citadel-rs"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
epub = "2.1.1"
mobi = "0.8.0"
citadel-core = { path = "../crates/citadel-core" }
libcalibre = { path = "../crates/libcalibre" }
log = "0.4"
quick-xml = "0.38"
regex = "1.10.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "=2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-drag = "2.1.0"
tauri-plugin-persisted-scope = { features = ["protocol-asset"] , version = "2" }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = [ "v4", "fast-rng", ] }
zip = "0.6"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-webdriver-automation = "0.1.3"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

